--- a/src/main/resources/templates/school-subject.html
+++ b/src/main/resources/templates/school-subject.html
@@ -5,30 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <label for="studentSelect">Select an option:</label>
-    <select id="studentSelect">
-        <option value="김영롱">김영롱</option>
-        <option value="우무룡">우무룡</option>
-        <option value="정지용">정지용</option>
-        <option value="이윤선">이윤선</option>
-        <option value="김현지">김현지</option>
-    </select>
-
-    <!-- 버튼을 클릭하면 선택된 값을 사용하여 새로운 페이지로 이동 -->
-    <button onclick="redirectToNewPage()">학생별 학점 보기</button>
-
-    <div th:if="${student != null}">
-        <p><strong>Student Name:</strong> <span th:text="${student.name}"></span></p>
-        <p><strong>Student ID:</strong> <span th:text="${student.id}"></span></p>
-    </div>
-
-    <script>
-        function redirectToNewPage() {
-            let selectedValue = document.getElementById('studentSelect').value;
-            window.location.href = '/school?student=' + encodeURIComponent(selectedValue);
-        }
-    </script>
-
+<nav th:replace="~{fragments/navbar :: navbarFragment}"></nav>
     <label for="subjectSelect">Select an option:</label>
     <select id="subjectSelect">
         <option value="국어">국어</option>
@@ -37,17 +14,32 @@
     </select>
 
     <!-- 버튼을 클릭하면 선택된 값을 사용하여 새로운 페이지로 이동 -->
-    <button onclick="redirectToNewPageBySubject()">학생별 학점 보기</button>
+    <button onclick="redirectToNewPageBySubject()">과목 학점 보기</button>
 
-    <div th:if="${student != null}">
-        <p><strong>Student Name:</strong> <span th:text="${student.name}"></span></p>
-        <p><strong>Student ID:</strong> <span th:text="${student.id}"></span></p>
-    </div>
+    <table>
+        <thead>
+        <tr>
+            <th>이름</th>
+            <th>학번</th>
+            <th>중점과목</th>
+            <th>점수</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="subject : ${subjects}">
+            <td th:text="${subject.studentName}"></td>
+            <td th:text="${subject.studentId}"></td>
+            <td th:text="${subject.majorSubject}"></td>
+            <td th:text="${subject.score}">:</td>
+            <td th:text="${subject.grade}"></td>
+        </tr>
+        </tbody>
+    </table>
 
     <script>
         function redirectToNewPageBySubject() {
             let selectedValue = document.getElementById('subjectSelect').value;
-            window.location.href = '/school?subject=' + encodeURIComponent(selectedValue);
+            window.location.href = '/school/subject?subject=' + encodeURIComponent(selectedValue);
         }
     </script>
 </body>
